name:                adventofcode2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thomaschrstnsn/adventofcode2017#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       base >= 4.7 && < 5, hspec, hspec-core, QuickCheck, vector, primitive, containers, parsec, split
  default-language:    Haskell2010
  ghc-options:         -Wall

executable day05part2
  main-is: day05part2.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5, hspec, QuickCheck, vector, primitive
  default-language: Haskell2010

executable day10part2
  main-is: day10part2.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5, hspec, hspec-core, QuickCheck, containers
  default-language: Haskell2010

executable day13part2
  main-is: day13part2.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5, hspec, hspec-core
  default-language: Haskell2010

executable day14part2
  main-is: day14part2.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5, hspec, hspec-core, containers, vector, primitive
  default-language: Haskell2010

executable day15
  main-is: day15.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5, hspec, hspec-core
  default-language: Haskell2010

executable day15part2
  main-is: day15part2.hs
  hs-source-dirs:
      .
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5, hspec, hspec-core
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/thomaschrstnsn/adventofcode2017
